--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
 rootProject.name = 'design-patterns-java'
 
-include 'singleton', 'factory-object'
+include 'singleton', 'factory-object', 'factory-method'
